--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -80,3 +80,27 @@ jobs:
           containerAppName: ${{ env.CONTAINER_APP_NAME_FRONTEND }}
           environmentVariables: |
             VITE_API_URL=https://${{ steps.get-backend-url.outputs.backend_url }}
+
+      - name: Create deployment record
+        id: create_deployment
+        uses: peter-evans/create-deployment@v1
+        with:
+          environment: production
+          description: "Deploy backend container app"
+          transient_environment: false
+          auto_merge: false
+          production_environment: true
+
+      - name: Mark deployment as successful
+        if: ${{ success() }}
+        uses: peter-evans/deployment-status@v1
+        with:
+          deployment_id: ${{ steps.create_deployment.outputs.deployment_id }}
+          state: success
+
+      - name: Mark deployment as failed
+        if: ${{ failure() }}
+        uses: peter-evans/deployment-status@v1
+        with:
+          deployment_id: ${{ steps.create_deployment.outputs.deployment_id }}
+          state: failure
