--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -3,6 +3,10 @@ FROM node:18-alpine AS builder
 
 WORKDIR /frontend
 COPY package.json package-lock.json ./
+
+ARG VITE_API_URL
+ENV VITE_API_URL=$VITE_API_URL
+
 RUN npm install
 COPY . .
 RUN npm run build
